@@ -1,5 +1,9 @@
 2004-05-28  Paul Brook  <paul@codesourcery.com>
 
+	* config/arm/arm.c (arm_output_epilogue): Remove redundant code.
+
+2004-05-28  Paul Brook  <paul@codesourcery.com>
+
 	* config/arm/arm.c (thumb_force_lr_save): New function.
 	(arm_get_frame_offsets, thumb_unexpanded_epilogue,
 	thumb_output_function_prologue): Use it.
